changes to make work code

--- a/school/src/app/students.component.html
+++ b/school/src/app/students.component.html
@@ -16,7 +16,7 @@
 </ul>
 <div *ngIf="selectedStudent">
   <h2>
-    {{selectedStudent.name | uppercase}} is the Student
+    {{selectedStudent.name | uppercase}} is a Student
   </h2>
   <button (click)="gotoDetail()">View Details</button>
 </div>
